<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <item
        android:id="@+id/currentLocation"
        android:title="@string/currentLocation"
        />
    <item
        android:id="@+id/saveLocation"
        android:title="@string/saveLocation"
        />
    <item
        android:id="@+id/sportFacilities"
        android:title="@string/sportFacilities"
    />
    <item
        android:id="@+id/sportPools"
        android:title="@string/sportPools"
        />
    <item
        android:id="@+id/relevantSites"
        android:title="@string/relevantSites"
        />
    <item
        android:id="@+id/favourites"
        android:title="@string/favourites"
        />
</menu>